--- a/docs/blog/2019-08-20-express.md
+++ b/docs/blog/2019-08-20-express.md
@@ -123,8 +123,9 @@ app.listen(8081,function () {
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <!-- 下面这句blocktitle中间要有空格 -->
-    <title>{% blocktitle %}{% endblock %}</title>
+    <title>
+    {% block title %}{% endblock %}
+    </title>
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
     {% block head %}
