--- a/docs/blog/2019-08-20-express.md
+++ b/docs/blog/2019-08-20-express.md
@@ -124,7 +124,8 @@ app.listen(8081,function () {
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>
-    {% block title %}{% endblock %}
+    {% block title %}
+    {% endblock %}
     </title>
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
     <link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
